@@ -294,18 +294,35 @@ class TestCase::Sys::IO {
   }
   
   static method fileno : int ($test_dir : string) {
-
-    my $file = "$test_dir/foo.txt";
-    my $stream = Sys::IO->fopen($file, "w");
     
-    unless (Sys::FileTest->f($file)) {
-      return 0;
+    {
+      my $file = "$test_dir/foo.txt";
+      my $stream = Sys::IO->fopen($file, "w");
+      
+      unless (Sys::FileTest->f($file)) {
+        return 0;
+      }
+      
+      my $fd = Sys::IO->fileno($stream);
+      
+      unless ($fd >= 0) {
+        return 0;
+      }
     }
     
-    my $fd = Sys::IO->fileno($stream);
-    
-    unless ($fd >= 0) {
-      return 0;
+    {
+      my $file = "$test_dir/foo.txt";
+      my $stream = Sys::IO->fopen($file, "w");
+      
+      unless (Sys::FileTest->f($file)) {
+        return 0;
+      }
+      
+      my $fd = Sys->fileno($stream);
+      
+      unless ($fd >= 0) {
+        return 0;
+      }
     }
     
     return 1;
@@ -461,7 +478,6 @@ class TestCase::Sys::IO {
       }
     }
     
-    
     return 1;
   }
 
@@ -507,6 +523,52 @@ class TestCase::Sys::IO {
       }
       
       my $feof = Sys::IO->feof($stream);
+      
+      unless ($feof) {
+        return 0;
+      }
+    }
+    
+    {
+      my $file = "$test_dir/ftest/file_bytes8.txt";
+      my $stream = Sys::IO->fopen($file, "rb");
+      
+      unless ($stream) {
+        return 0;
+      }
+      
+      my $buffer = (mutable string)new_string_len 4;
+      my $size = 1;
+      my $length = 4;
+      
+      my $read_length = 0;
+      
+      $read_length = Sys::IO->fread($buffer, $size, $length, $stream);
+      
+      unless ($buffer eq "abcd") {
+        return 0;
+      }
+     
+      unless ($read_length == 4) {
+        return 0;
+      }
+      
+      $read_length = Sys::IO->fread($buffer, $size, $length, $stream);
+      
+      unless ($buffer eq "efgh") {
+        return 0;
+      }
+      
+      unless ($read_length == 4) {
+        return 0;
+      }
+      
+      $read_length = Sys::IO->fread($buffer, $size, $length, $stream);
+      unless ($read_length == 0) {
+        return 0;
+      }
+      
+      my $feof = Sys->eof($stream);
       
       unless ($feof) {
         return 0;
